src/test/deca/context/invalid/pierre/objects/callProtected.deca
class A {
    protected int no;
}
class C {
    int test() {
        A a = new A();
        return a.no;
    }
}
{}